--- a/pruebas/01-reading-list/fmoraless/package.json
+++ b/pruebas/01-reading-list/fmoraless/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "flowbite": "^1.7.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
